--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "cmake.configureOnOpen": true,
-    "files.associations": {
-        "iostream": "cpp"
-    }
+  "cmake.configureOnOpen": true,
+  "files.associations": {
+    "iostream": "cpp"
+  },
+  "C_Cpp.errorSquiggles": "disabled"
 }
